--- a/cwierkaczApp/app/src/main/res/values/colors.xml
+++ b/cwierkaczApp/app/src/main/res/values/colors.xml
@@ -5,13 +5,15 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+
     <color name="colorPrimary">#dddddd</color>
-    <color name="colorPrimaryDark">#bbbbbb</color>
+    <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#209ee6</color>
+    <color name="black">#000000</color>
+    <color name="white">#FFFFFF</color>
     <color name="blue">#0000ff</color>
     <color name="dark_grey">#777777</color>
     <color name="trnasparent_grey">#99cccccc</color>
     <color name="shadow_color">#cadddddd</color>
+
 </resources>
