--- a/cwierkaczApp/app/src/main/res/values/styles.xml
+++ b/cwierkaczApp/app/src/main/res/values/styles.xml
@@ -22,4 +22,10 @@
     <style name="LinkText">
         <item name="android:textColor">@color/blue</item>
     </style>
+
+    <style name="Heading">
+        <item name="android:textSize">26sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
 </resources>
