--- a/cwierkaczApp/app/src/main/res/layout/fragment_search.xml
+++ b/cwierkaczApp/app/src/main/res/layout/fragment_search.xml
@@ -16,7 +16,8 @@
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/swipeRefresh"></ImageView>
+        app:layout_constraintTop_toTopOf="@+id/swipeRefresh">
+    </ImageView>
 
 <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
     android:id="@+id/swipeRefresh"
